<resources>
    <string name="app_name">trtc</string>
    <string name="str_room_id_tips">输入房间号</string>
    <string name="str_user_id_tips">输入用户名</string>
    <string name="confirm">确定</string>
    <string name="share">分享</string>
    <string name="str_cdn_switch">切换cdn播放</string>
    <string name="trtcdemo_frame_fill_mode">画面填充</string>
    <string name="trtcdemo_frame_fill_mode_fill">充满</string>
    <string name="trtcdemo_frame_fill_mode_fit">自适应</string>
    <string name="trtcdemo_frame_rotate">画面旋转</string>
    <string name="trtcdemo_setting_tab_video">视频</string>
    <string name="trtcdemo_setting_tab_audio">音频</string>
    <string name="trtcdemo_setting_tab_cdn">混流</string>
    <string name="trtcdemo_setting_tab_pk">PK</string>
    <string name="trtcdemo_setting_tab_other">其他</string>
    <string name="trtcdemo_setting_tab_sub_room">子房间</string>
    <string name="trtcdemo_volumn_type">音量类型</string>
    <string name="trtcdemo_volumn_type_auto">自动</string>
    <string name="trtcdemo_volumn_type_media">媒体</string>
    <string name="trtcdemo_volumn_type_voip">通话</string>
    <string name="trtcdemo_ans">噪音消除</string>
    <string name="trtcdemo_close">关</string>
    <string name="trtcdemo_low">低</string>
    <string name="trtcdemo_middle">中</string>
    <string name="trtcdemo_high">高</string>
    <string name="trtcdemo_ai">AI</string>
    <string name="trtcdemo_aec">回声消除</string>
    <string name="trtcdemo_capture_volume">采集音量</string>
    <string name="trtcdemo_play_volume">播放音量</string>
    <string name="trtcdemo_voice_pitch">音调设置</string>
    <string name="trtcdemo_auricular_regurgitation">耳返</string>
    <string name="trtcdemo_receiver_mode">听筒模式</string>
    <string name="trtcdemo_automatic_gain">自动增益</string>
    <string name="trtcdemo_volume_tips">音量提示</string>
    <string name="trtcdemo_open_flash">开启闪光灯</string>
    <string name="trtcdemo_open_gravity_inuction">开启重力感应</string>
    <string name="trtcdemo_close_gravity_inuction">重力感应已关闭</string>
    <string name="trtcdemo_sei_message">SEI消息</string>
    <string name="trtcdemo_other_roomid">对方房间号</string>
    <string name="trtcdemo_other_userid">对方用户名</string>
    <string name="trtcdemo_start_pk">开始PK</string>
    <string name="trtcdemo_stop_pk">断开连接</string>
    <string name="trtcdemo_please_input_roomid">请输入房间号</string>
    <string name="trtcdemo_please_input_userid">请输入用户名</string>
    <string name="trtcdemo_open_video">开启视频</string>
    <string name="trtcdemo_open_audio">开启音频</string>
    <string name="trtcdemo_video_capture">视频截图</string>
    <string name="trtcdemo_capture_image">截图</string>
    <string name="trtcdemo_see_type">观看类型</string>
    <string name="trtcdemo_big_stream">大流</string>
    <string name="trtcdemo_small_stream">小流</string>
    <string name="trtcdemo_remote_mirror">开启镜像</string>
    <string name="trtcdemo_open">开启</string>
    <string name="trtcdemo_play_address_not_empty">播放地址不能为空</string>
    <string name="trtcdemo_completed_copy">播放地址已复制到剪贴板</string>
    <string name="trtcdemo_main_solution">主路分辨率</string>
    <string name="trtcdemo_main_frame_bits">主路帧率</string>
    <string name="trtcdemo_main_code_bits">主路码率</string>
    <string name="trtcdemo_picture_quality">画质偏好</string>
    <string name="trtcdemo_priority_flow">优先流畅</string>
    <string name="trtcdemo_priority_vivid">优先清晰</string>
    <string name="trtcdemo_main_picture_orientation">主路画面方向</string>
    <string name="trtcdemo_horizontal_mode">横屏模式</string>
    <string name="trtcdemo_vertical_mode">竖屏模式</string>
    <string name="trtcdemo_volume_set">音量大小</string>
    <string name="trtcdemo_local_mirror">本地预览镜像</string>
    <string name="trtcdemo_local_front_camera_open">前摄开启</string>
    <string name="trtcdemo_mirror_all_open">前后摄都开启</string>
    <string name="trtcdemo_mirror_all_close">前后摄都关闭</string>
    <string name="trtcdemo_local_rotate_direction">本地预览旋转角度</string>
    <string name="trtcdemo_code_output_picture_rotate">编码输出画面旋转</string>
    <string name="trtcdemo_set_shim">设置垫片</string>
    <string name="trtcdemo_open_watermark">开启视频水印</string>
    <string name="trtcdemo_open_time_watermark">开启时间水印</string>
    <string name="trtcdemo_open_video_capture">开启视频采集</string>
    <string name="trtcdemo_pause_screen_capture">暂停屏幕采集</string>
    <string name="trtcdemo_open_remote_mioor">开启远程镜像</string>
    <string name="trtcdemo_picture_enhance">图像增强</string>
    <string name="trtcdemo_lcoal_video_capture">本地视频截图</string>
    <string name="trtcdemo_open_hardware_code_tips">已开启硬件解码加速，切换会重启播放流程!</string>
    <string name="trtcdemo_close_hardware_code_tips">已关闭硬件解码加速，切换会重启播放流程!</string>
    <string name="trtcdemo_no_play_address">无播放地址</string>
    <string name="trtcdemo_ener_room_success_tips">加入房间成功，耗时 </string>
    <string name="trtcdemo_mills"> 毫秒</string>
    <string name="trtcdemo_enter_room_fail_tips">加入房间失败</string>
    <string name="trtcdemo_pk_success_tips">跨房连麦成功</string>
    <string name="trtcdemo_pk_fail_tips">跨房连麦失败</string>
    <string name="trtcdemo_play_end"> 播放结束</string>
    <string name="trtcdemo_receive">收到</string>
    <string name="trtcdemo_message_end">的消息：</string>
    <string name="trtcdemo_play_success">播放成功：</string>
    <string name="trtcdemo_play_fail">播放失败：</string>
    <string name="trtcdemo_capture_picture_fail">截图失败</string>
    <string name="trtcdemo_sure">确定</string>
    <string name="trtcdemo_main_video_input">主路视频输入</string>
    <string name="trtcdemo_camera">摄像头</string>
    <string name="trtcdemo_video_file">视频文件</string>
    <string name="trtcdemo_screen_capture">录屏</string>
    <string name="trtcdemo_audio_input">音频输入</string>
    <string name="trtcdemo_sdk_capture">SDK采集</string>
    <string name="trtcdemo_custom_capture">自定义采集</string>
    <string name="trtcdemo_audio_quality">音频质量</string>
    <string name="trtcdemo_audio_quality_music">音乐</string>
    <string name="trtcdemo_default">默认</string>
    <string name="trtcdemo_voice">语音</string>
    <string name="trtcdemo_audio_output">音频输出</string>
    <string name="trtcdemo_speaker">扬声器</string>
    <string name="trtcdemo_receiver">听筒</string>
    <string name="trtcdemo_roomid_type">房间号类型</string>
    <string name="trtcdemo_number">数字</string>
    <string name="trtcdemo_string">字符串</string>
    <string name="trtcdemo_start_test_speed">开始测速</string>
    <string name="trtcdemo_stop_test_speed">完成测速</string>
    <string name="trtcdemo_create_room_and_join_in">创建并自动加入房间</string>
    <string name="trtcdemo_permission_tips">用户没有允许需要的权限，使用可能会受到限制！</string>
    <string name="trtcdemo_switching">切换中</string>
    <string name="trtcdemo_switch_cdn_lay">切换CDN播放</string>
    <string name="trtcdemo_switch_udp_play">切换UDP播放</string>
    <string name="trtcdemo_role_select">角色选择</string>
    <string name="trtcdemo_anchor">主播</string>
    <string name="trtcdemo_audience">观众</string>
    <string name="trtc_call_sceen">视频通话</string>
    <string name="trtc_live_sceen">连麦互动</string>
    <string name="trtcdemo_copy">复制</string>
    <string name="trtcdemo_mute">静音</string>
    <string name="trtcdemo_cancel_mute">取消静音</string>
    <string name="trtcdemo_video_close">视频已关闭</string>
    <string name="trtcdemo_send">发送</string>
    <string name="trtcdemo_play_address">播放地址</string>
    <string name="trtcdemo_speed_test">TRTC 网络测速</string>
    <string name="trtcdemo_speedtest_start">开始测速</string>
    <string name="trtcdemo_speed_test_result">测速结果：</string>
    <string name="trtcdemo_speed_test_fail">测速失败</string>
    <string name="trtcdemo_null">无</string>
    <string name="trtcdemo_net_env">云端环境</string>
    <string name="trtcdemo_product">正式</string>
    <string name="trtcdemo_test">测试</string>
    <string name="trtcdemo_experience">体验</string>
    <string name="trtcdemo_sub_video_input">辅路视频输入</string>
    <string name="trtcdemo_local_render_view_type">本地画面渲染类型</string>
    <string name="trtcdemo_render_view_default">默认</string>
    <string name="trtcdemo_render_view_surfaceview">SurfaceView</string>
    <string name="trtcdemo_render_view_textureview">TextureView</string>
    <string name="trtcdemo_render_view_custom">Custom</string>
    <string name="trtcdemo_video_receive">视频接收</string>
    <string name="trtcdemo_audio_receive">音频接收</string>
    <string name="trtcdemo_auto">自动</string>
    <string name="trtcdemo_manual">手动</string>
    <string name="trtcdemo_encoder_type">编码类型</string>
    <string name="trtcdemo_encoder_h265">h265</string>
    <string name="trtcdemo_encoder_h264">h264</string>
    <string name="trtcdemo_encoder_soft_hard_setting">软硬编码设置</string>
    <string name="trtcdemo_encoder_software">软件编码</string>
    <string name="trtcdemo_encoder_hardware">硬件编码</string>
    <string name="trtcdemo_encoder_auto">自动</string>
    <string name="trtcdemo_performance_mode">性能模式</string>
    <string name="trtcdemo_custom_video_preprocess_buffer_type">自定义预处理存储格式</string>
    <string name="trtcdemo_custom_video_preprocess_close">关闭</string>
    <string name="trtcdemo_custom_video_preprocess_texture">纹理</string>
    <string name="trtcdemo_custom_video_preprocess_byte_array">byte[]</string>
    <string name="trtcdemo_custom_video_preprocess_byte_buffer">ByteBuffer</string>
    <string name="trtcdemo_custom_video_preprocess_pixel_format">自定义预处理数据格式</string>
    <string name="trtcdemo_custom_video_preprocess_i420">I420</string>
    <string name="trtcdemo_custom_video_preprocess_nv21">NV21</string>
    <string name="trtcdemo_sub_solution">辅路分辨率</string>
    <string name="trtcdemo_sub_frame_bits">辅路帧率</string>
    <string name="trtcdemo_sub_code_bits">辅路码率</string>
    <string name="trtcdemo_sub_picture_orientation">辅路画面方向</string>
    <string name="trtcdemo_publish_video">推送视频</string>
    <string name="trtcdemo_audio_capture">声音采集</string>
    <string name="trtcdemo_audio_record">音频录制</string>
    <string name="trtcdemo_qos_mode">流控方案</string>
    <string name="trtcdemo_control_client">客户端控</string>
    <string name="trtcdemo_control_server">云端流控</string>
    <string name="trtcdemo_enable_small">开启双路编码</string>
    <string name="trtcdemo_prior_small">默认观看低清</string>
    <string name="trtcdemo_enable_vodplayer">开启点播播放器</string>
    <string name="trtcdemo_custom_message">自定义消息</string>
    <string name="trtcdemo_record_mode">录制模式</string>
    <string name="trtcdemo_only_audio">仅音频</string>
    <string name="trtcdemo_only_video">仅视频</string>
    <string name="trtcdemo_audio_video">音视频</string>
    <string name="trtcdemo_start_record">开始录制</string>
    <string name="trtcdemo_stop_record">停止录制</string>
    <string name="trtcdemo_background">背景图</string>
    <string name="trtcdemo_background_close">关闭</string>
    <string name="trtcdemo_background1">图1</string>
    <string name="trtcdemo_background2">图2</string>
    <string name="trtcdemo_publish">推流</string>
    <string name="trtcdemo_exit_room">退房</string>
    <string name="trtcdemo_new_room">新房间</string>
    <string name="trtcdemo_create">创建</string>
    <string name="trtcdemo_room_exists">已有相同房间</string>
    <string name="trtcdemo_create_sub_room_failed">创建子房间失败</string>
    <string name="trtcdemo_open_flash_failed">打开闪光灯失败</string>
    <string name="trtcdemo_title_vodplayer">点播播放器</string>
    <string name="trtcdemo_cloud_mixstream">云端画面混流</string>
    <string name="trtcdemo_cloud_mixstream_close">关闭</string>
    <string name="trtcdemo_cloud_mixstream_manual">手动</string>
    <string name="trtcdemo_camera_capture_resolution">摄像头分辨率</string>
    <string name="trtcdemo_camera_resolution_width">宽度</string>
    <string name="trtcdemo_camera_resolution_height">高度</string>
    <string name="trtcdemo_mix_id">混流ID</string>
    <string name="trtcdemo_mix_custom_id">自定义混流ID</string>
    <string name="trtcdemo_set">设置</string>
    <string name="trtcdemo_title_third_party_cdn_publish">第三方混流</string>
    <string name="trtcdemo_btn_start_third_party_cdn_publish">开始转推</string>
    <string name="trtcdemo_third_party_cdn_publish_url">推流URL</string>
    <string name="trtcdemo_third_party_cdn_publish_stream_id">StreamId</string>
</resources>