<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/trtcdemo_capture_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="top"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="@string/trtcdemo_camera_capture_resolution"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_alignParentRight="true"
        android:layout_weight="2" >

        <EditText
            android:id="@+id/trtcdemo_x_resolution_et"
            android:layout_width="wrap_content"
            android:hint="@string/trtcdemo_camera_resolution_width"
            android:textSize="15sp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/trtcdemo_y_resolution_et"
            android:layout_width="wrap_content"
            android:hint="@string/trtcdemo_camera_resolution_height"
            android:textSize="15sp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
